--- a/templates/includes/_tweetlayout.html
+++ b/templates/includes/_tweetlayout.html
@@ -7,7 +7,19 @@
                 <p>{{ tweet.content }}</p>
                 <div class="row">
                     <div class="col-xs-8"> <footer>{{ tweet.time_posted }}</footer> </div>
-                    <div class="col-xs-2"> <footer><input type="submit" class="btn btn-default" value="Follow"></footer> </div>
+                    <div class="col-xs-2">
+                        <form action="" method="POST" >
+                            {% if tweet in followers %}
+                                <button class="btn btn-danger" type="submit" name="delete" value="">
+                                    <span class="glyphicon glyphicon-thumbs-down"></span> Unfollow
+                                </button>
+                            {% else %}
+                                <button class="btn btn-success" type="submit" name="delete" value="">
+                                    <span class="glyphicon glyphicon-heart-empty"></span> Follow
+                                </button>
+                            {% endif %}
+                        </form>
+                    </div>
                 </div>
             </div>
         {% endfor %}
