--- a/templates/settings.html
+++ b/templates/settings.html
@@ -6,12 +6,9 @@
 
     <h1>Your profile</h1>
     <div>
-        <p>{{ form }}</p>
-        <p>{{ form }}</p>
-        <p>{{ form }}</p>
-        <p>{{ form }}</p>
-        <p>{{ form }}</p>
-        <p>{{ form }}</p>
+        <p><b>Username: </b>{{ session['user'][1] }}</p>
+        <p><b>Email:    </b>{{ session['user'][2] }}</p>
+        <p><b>Age:      </b>{{ session['user'][3] }}</p>
     </div>
 
 
