--- a/templates/includes/_tweetlayout.html
+++ b/templates/includes/_tweetlayout.html
@@ -9,12 +9,16 @@
                     <div class="col-xs-8"> <footer>{{ tweet.time_posted }}</footer> </div>
                     <div class="col-xs-2">
                         <form action="" method="POST" >
-                            {% if tweet in followers %}
-                                <button class="btn btn-danger" type="submit" name="delete" value="">
+                            {% if tweet.posterid == session['user'][0] %}
+                                <button class="btn btn-warning" type="submit" name="delete" value={{ tweet.tweetid }}>
+                                    <span class="glyphicon glyphicon-thumbs-down"></span> Delete
+                                </button>
+                            {% elif tweet.posterid in followers %}
+                                <button class="btn btn-danger" type="submit" name="unfollow" value={{ tweet.posterid }}>
                                     <span class="glyphicon glyphicon-thumbs-down"></span> Unfollow
                                 </button>
                             {% else %}
-                                <button class="btn btn-success" type="submit" name="delete" value="">
+                                <button class="btn btn-success" type="submit" name="follow" value={{ tweet.posterid }}>
                                     <span class="glyphicon glyphicon-heart-empty"></span> Follow
                                 </button>
                             {% endif %}
@@ -25,6 +29,31 @@
         {% endfor %}
     </div>
     {% endfor %}
+
+
+{#
+    <hr>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <button class="btn btn-default" type="submit" name="page" value="previous">
+                    <span class="glyphicon glyphicon-arrow"></span> Previous
+                </button>
+            </div>
+            <div class="col-md-6">
+                PAGE 1
+            </div>
+            <div class="col-md-6">
+                <span class="pull-right">
+                    <button class="btn btn-default" type="submit" name="page" value="next">
+                        <span class="glyphicon glyphicon-arrow"></span> Next
+                    </button>
+                </span>
+            </div>
+        </div>
+    </div>
+#}
 
     <hr>
 
