--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -19,7 +19,7 @@
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                {% if session.logged_in %}
+                {% if session.get('logged_in') %}
                     <li><a href="/settings">Settings</a></li>
                     <li><a href="/logout">Log out</a></li>
                 {% else %}
