--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,6 +2,7 @@
 
 {% block body %}
 
-    <h3>Look in Meta at KTH.</h3>
+    <h2>To report a bug, ask a question, comment or just chat</h2>
+    <h3>Look in Meta at KTH. Bring coffee!</h3>
 
 {% endblock %}
