--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -8,6 +8,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
+
+            <img class="navbar-brand" src="/static/logo_transparent.png" alt="Logo" style="padding:8px">
             <a class="navbar-brand" href="/">Tweeter</a>
         </div>
 
