--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
         {% include 'includes/_navbar.html' %}
 
         <div class="container">
-            {% include 'includes/_messages.html' %}
+            {% include 'includes/_flash_messages.html' %}
             {% block body %}{% endblock %}
         </div>
 
