--- a/app/templates/tweets.html
+++ b/app/templates/tweets.html
@@ -8,7 +8,7 @@
         <h2>Post a tweet!</h2>
         <form method="POST" action="">
             <div class="form-group">
-                {{ render_field(form.content, class_="form-control") }}
+                {{ render_field(form.post, class_="form-control") }}
             </div>
 
             <p><input type="submit" class="btn btn-primary" value="Post"></p>
