Made sure the project is synchronized with the lesson on ludu.

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -16,7 +16,7 @@
     <form method="POST" action="">
         <h3>Search</h3>
         <div class="form-group">
-            {{ render_field(form.username, class_="form-control") }}
+            {{ render_field(form.search, class_="form-control") }}
         </div>
     </form>
 
