the final final commit

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <h2>To report a bug, ask a question, comment or just chat</h2>
-    <h3>Look in Meta at KTH. Bring coffee!</h3>
+    <h2>To report a bug, ask a question, comment or just chat:</h2>
+    <p>Look in Meta at KTH. Shout. Bring coffee! Or beer... Or both!</p>
 
 {% endblock %}
