--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -4,7 +4,15 @@
 
     {% from 'includes/_formhelpers.html' import render_field %}
 
-    <h1>Register</h1>
+    <h2>Your profile</h2>
+    <div class="container">
+        <p><b>Username: </b>{{ session['user'][1] }}</p>
+        <p><b>Email:    </b>{{ session['user'][2] }}</p>
+        <p><b>Age:      </b>{{ session['user'][3] }}</p>
+    </div>
+
+
+    <h2>Change info</h2>
     <form method="POST" action="">
         <div class="form-group">
             {{ render_field(form.username, class_="form-control") }}
@@ -22,7 +30,7 @@
             {{ render_field(form.confirm, class_="form-control") }}
         </div>
 
-        <p><input type="submit" class="btn btn-primary" value="Submit"></p>
+        <p><input type="submit" class="btn btn-primary" value="Confirm"></p>
     </form>
 
 {% endblock %}
