--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -1,18 +1,19 @@
+
 {% extends 'layout.html' %}
 
 {% block body %}
 
     {% from 'includes/_formhelpers.html' import render_field %}
 
-    <h1>Your profile</h1>
-    <div>
+    <h2>Your profile</h2>
+    <div class="container">
         <p><b>Username: </b>{{ session['user'][1] }}</p>
         <p><b>Email:    </b>{{ session['user'][2] }}</p>
         <p><b>Age:      </b>{{ session['user'][3] }}</p>
     </div>
 
 
-    <h1>Change info</h1>
+    <h2>Change info</h2>
     <form method="POST" action="">
         <div class="form-group">
             {{ render_field(form.username, class_="form-control") }}
