--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <h2>To report a bug, ask a question, comment or just chat:</h2>
-    <p>Look in Meta at KTH. Shout. Bring coffee! Or beer... Or both!</p>
+    <h2>To report a bug, ask a question, comment or something else:</h2>
+    <p>Write a comment on the course on Ludu.co! Or look in Meta at KTH. Shout. Bring coffee!</p>
 
 {% endblock %}
